Completed all module Objectives

--- a/module1-decision-trees/LS_DS_221.Objective.1.ipynb
+++ b/module1-decision-trees/LS_DS_221.Objective.1.ipynb
@@ -255,7 +255,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "953e02d3",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -295,11 +297,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fbe864d",
+   "id": "76426a29",
    "metadata": {},
    "source": [
     "[Link text Here](https://link-url-here.org)\n",
-    "Kaggle Data Cleaning Challenge [https://www.kaggle.com/rtatman/data-cleaning-challenge-handling-missing-values]\n",
+    "[Kaggle Data Cleaning Challenge] (https://www.kaggle.com/rtatman/data-cleaning-challenge-handling-missing-values)\n",
     "[NASA Exoplanet Catalog](https://exoplanets.nasa.gov/exoplanet-catalog/)"
    ]
   }
