--- a/module1-decision-trees/LS_DS_221_assignments.ipynb
+++ b/module1-decision-trees/LS_DS_221_assignments.ipynb
@@ -265,7 +265,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -279,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.9"
   }
  },
  "nbformat": 4,
